<resources>
    <string name="app_name">Assignment3</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="addresstitle">Address Title</string>
    <string name="addressstreet">Address Street</string>
    <string name="elevation">Elevation</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title_activity_menu">menu</string>
</resources>
